Fix default CMake generator setting.

Make it an int option that denote an index of selected generator in static generators list.

BUG: 356875